********** SPL 1.6 Alpha 4 **********
===== Build 0073 2019/04/23 =====

* Added new runtime check:
    * Heap object assignment duplicate check
    * Immutable list for *args
* Bug fixes:
    * Fixed that *args and **kwargs not working properly

********** SPL 1.6 Alpha 3 **********
===== Build 0072 2019/04/20 =====

* Added built-in function:
    * exec()
* Bug fixes:
    * Fixed that the spl might not find the interpreter path

********** SPL 1.6 Alpha 2 **********
===== Build 0071 2019/04/19 =====

* Bug fixes:
    * Fixed that setitem causing error in loop
* Optimizations:
    * Optimized the function call evaluator

********** SPL 1.6 Alpha 1 **********
===== Build 0070 2019/04/18 =====

* Added portable list, pair, set creation:
    * List creation with [a, b, c]
    * Pair creation with {a = x, b = y, c = z}
    * Set creation with {a, b, c}
* Bug fixes:
    * Fixed that getitem and setitem not working properly
* Optimizations:
    * Optimized codes in parser

********** SPL 1.5.2 **********
===== Build 0069 2019/04/17 =====

* Unittest updates:
    * Unittest module now prints out the failed test to stderr
* Bug fixes:
    * The key type of returning pair of native.variables() is python native str

********** SPL 1.5.1 **********
===== Build 0068 2019/04/17 =====

* Make the Function a SPL object
* Added the access from SPL code to python instance
* Changed the annotations from dictionary to spl Set
* Changed the mechanism of string and print
* Bug fixes:
    * if-else without braces

********** SPL 1.5 Release **********
===== Build 0067 2019/04/14 =====

* Changed the type name of system, os, and natives to UpperCamel

********** SPL 1.5 Release Candidate 3 **********
===== Build 0066 2019/04/13 =====

* Bug fixes:
    * Fixed the file directory problem
    * Fixed the bug that operator 'instanceof' returns false for all native types
* Interpreter code optimization:
    * Set the '__' suffix as the signal of spl internal method